# namae-py

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
src/namae/: __init__.py  parser.py
src/namae/data/: particles.txt
tests/: test_parser.py
