[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namae-py"
version = "0.1.0"
description = "A Python port of the Ruby Namae name parser gem"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["name", "parser", "nlp", "linguistics"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/namae-py"
Repository = "https://github.com/yourusername/namae-py"
Issues = "https://github.com/yourusername/namae-py/issues"